# universe

./: .gitignore  .gitmodules  CMakeLists.txt  README.MD
res/shaders/: shader.frag  shader.vert
scripts/: compile_shaders.sh
src/: CMakeLists.txt  main.cpp
src/application/: Application.cpp  Application.h
src/renderer/: Renderer.cpp  Renderer.h
src/renderer/types/: UniformBufferData.h  Vertex.h
src/util/: Singleton.h
src/vulkan/: DebugHelper.cpp  DebugHelper.h  Device.cpp  Device.h  Instance.cpp  Instance.h  Renderer.h  Utils.h  Window.cpp  Window.h
src/vulkan/image/: ImageView.cpp  ImageView.h
src/vulkan/memory/: Buffer.cpp  Buffer.h  IndexBuffer.h  UniformBuffer.h  VertexBuffer.h
src/vulkan/pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  PipelineDescriptor.cpp  PipelineDescriptor.h
src/vulkan/swapchain/: Swapchain.cpp  Swapchain.h
